plugins {
	id 'java'
	id 'maven-publish'
}

sourceCompatibility = 8
targetCompatibility = 8

group = "de.phoenixmitx"
archivesBaseName = "LombokExtensions"
version = "1.0.0"
description = "A library for lomboks ExtensionMethods"

repositories {
	mavenCentral()
}

dependencies {
	compileOnly 'org.projectlombok:lombok:1.18.24'
	annotationProcessor 'org.projectlombok:lombok:1.18.24'

	// Server
	
	// Own dependencies
	
	// used dependencies
}

task sourcesJar(type: Jar, dependsOn: classes) {
    classifier = 'sources'
    from sourceSets.main.allSource
}

artifacts {
    archives sourcesJar
}

publishing {
    publications {
        testing(MavenPublication) {
            from components.java
            artifact sourcesJar
        }
    }
}